--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>Escute e relaxe</h1>
-            <p>#Musicas suaves</p>
+            <h1>Relaxe e escute</h1>
+            <p>#Musicas</p>
         </div>
 
         <div class="video">
