--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <a href="https://www.youtube.com/watch?v=5pyk-DmkBsA">
                 <img src="https://img.youtube.com/vi/5pyk-DmkBsA/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=e4Ez99gCOiY">
-                <img src="https://img.youtube.com/vi/e4Ez99gCOiY/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=PAUlCK8kuGU">
+                <img src="https://img.youtube.com/vi/PAUlCK8kuGU/maxresdefault.jpg" />
             </a>
         </div>
     </section>
