--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang="pt-BR">
 
 <head>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik+Wet+Paint&family=Shadows+Into+Light&display=swap"
-        rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
     <title>Universo Mpb</title>
 </head>
 
@@ -20,7 +18,7 @@
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>Relaxe e escute</h1>
+            <h1>Melhores Mpb</h1>
             <p>#Musicas</p>
         </div>
 
