--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>Melhores Mpb</h1>
+            <h1>Melhores Mpbs</h1>
             <p>#Musicas</p>
         </div>
 
